--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ h4 {
     text-transform: capitalize;
     letter-spacing: 2px;
     position: relative;
-    color: #425BB5;
+    color: #3954cc;
     margin-left: 40px;
     font-weight: 700;
 }
@@ -74,11 +74,12 @@ h4:before {
     content: "";
     display: block;
     height: 2px;
-    background: #425BB5;
+    background: #2444d3;
     top: 9px;
 }
-
-
+.center{
+    text-align: center;
+}
 /* General
 ==================================================*/
 
@@ -89,6 +90,8 @@ body {
 }
 
 .size-50 {
+    font-family: Stephile Script;
+    color: #2444d3;
     font-size: 50px;
     line-height: 50px
 }
@@ -143,7 +146,7 @@ body {
     width: 100%;
     -webkit-animation: rotation 1s linear infinite;
     animation: rotation 1s linear infinite;
-    border: 2px solid #425BB5;
+    border: 2px solid #2444d3;
     border-top: 2px solid transparent;
     border-radius: 100%
 }
@@ -353,6 +356,7 @@ a.active {
 ==================================================*/
 #skill {
     padding: 100px 0;
+    position: relative;
 }
 .chart {
     width: 100%;
@@ -372,7 +376,14 @@ a.active {
     font-size: 20px;
 }
 
-
+.line{
+    width: 1200px;
+    height: 2px;
+    background-color: #2444d3;
+    position: absolute;
+    bottom: 70%;
+    z-index: -1;
+}
 /* projects section
 ==================================================*/
 
@@ -407,8 +418,8 @@ a.active {
 }
 
 .portfolio .categories-grid .categories ul li a.active {
-    background-color: #425BB5;
-    padding: 0px 20px;
+    background-color: #2444d3;
+    padding:0px 10px;
     color: white;
     text-decoration: none;
 }
@@ -416,6 +427,7 @@ a.active {
 .portfolio_filter {
     padding-left: 0;
 }
+
 
 .portfolio_item {
     position: relative;
@@ -465,7 +477,7 @@ a.active {
 .portfolio_item .portfolio_item_hover .item_info em {
     font-style: normal;
     display: inline-block;
-    background-color: #425BB5;
+    background-color: #2444d3;
     padding: 5px 20px;
     color: #fff;
     margin-top: 10px;
@@ -538,7 +550,9 @@ a.active {
     text-align:left;
     padding-top:20px;
 }
-
+.rainbow img{
+    rotate: 20deg;
+}
 
 /* experience section
 ==================================================*/
@@ -556,7 +570,7 @@ a.active {
     font-family: 'Lato', sans-serif;
     text-transform: capitalize;
     letter-spacing: 2px;
-    color: #425BB5;
+    color:#2444d3;
     font-size: 16px;
     font-weight: bold
 }
@@ -596,11 +610,11 @@ a.active {
 .timeline-event:hover .timeline-event-icon {
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
-    background-color: #425BB5;
+    background-color: #2444d3;
 }
 
 .timeline-event:hover .timeline-event-thumbnail {
-    box-shadow: inset 40em 0 0 0 #425BB5;
+    box-shadow: inset 40em 0 0 0 #2444d3;
 }
 
 .timeline-event-copy {
@@ -635,7 +649,7 @@ a.active {
     transition: transform 0.2s ease-in, -webkit-transform 0.2s ease-in;
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
-    background-color: #425BB5;
+    background-color:#2444d3;
     outline: 10px solid #f3f3f3;
     display: block;
     margin: 0.5em 0.5em 0.5em -0.5em;
@@ -657,7 +671,7 @@ a.active {
     font-size: 12px;
     font-weight: bold;
     background-color: black;
-    box-shadow: inset 0 0 0 0em #425BB5;
+    box-shadow: inset 0 0 0 0em #2444d3;
     display: inline-block;
     margin-bottom: 1.2em;
     padding: 0.25em 1em 0.2em 1em;
